--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="./navbar.css">
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" async>
-      window.addEventListener("load", async () => {
-        await setNavBar();
-      })
+        window.addEventListener("load", async () => {
+            await setNavBar();
+        })
     </script>
-      <title>Shoes Website Landing Page</title>
+    <title>Shoes Website Landing Page</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <div class="content">
             <h1>The House of <br><span class="style">Trendy Shoes</span></h1>
             <div class="text">
-                <button class="btn" onclick="location.href='http://127.0.0.1:3000/catalog.html';">Shop Now</button>
+                <button class="btn" onclick="location.href='./catalog.html';">Shop Now</button>
                 <div class="social-media">
                     <a href="https://www.facebook.com/Trendysshoeshoppe"><i class="fa icons fa-facebook"></i></a>
                     <a href="https://www.instagram.com/trendyshoe/"><i class="fa icons fa-instagram"></i></a>
