--- a/readme.html
+++ b/readme.html
@@ -23,7 +23,10 @@
       <input id="q2" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q2" class="panel-title">What additional page(s) did you add? How to operate it?</label>
-      <div class="panel-content">About us - some information about who we are and social links to web, Contact us - sending emails to administrators by filling in the form, Locations - In case you want to visit us you can find our stores in the map, Sign Up -  easy resgistresation for new users. In addition we used MongoDB which gave us additional functionalities such as privacy and DDOS security features that we used</div>
+      <div class="panel-content">About us - some information about who we are and social links to web, Contact us -
+        sending emails to administrators by filling in the form, Locations - In case you want to visit us you can find
+        our stores in the map, Sign Up - easy resgistresation for new users. In addition we used MongoDB which gave us
+        additional functionalities such as privacy and DDOS security features that we used</div>
     </div>
 
     <div class="faq-question">
@@ -32,7 +35,8 @@
       <label for="q3" class="panel-title"> What was hard to do?</label>
       <div class="panel-content">It was hard to plan the DB and its connection to the website, registering new users,
         and find exiting ones, same for the products. We have not gone through it in class and we found it more
-        difficulte than we imaganed it would be. Also, the tests part was harder than expected. It took me a long time to understand how to work with Jest</div>
+        difficulte than we imaganed it would be. Also, the tests part was harder than expected. It took me a long time
+        to understand how to work with Jest</div>
     </div>
 
     <div class="faq-question">
@@ -40,14 +44,18 @@
       <div class="plus">+</div>
       <label for="q4" class="panel-title">Who is your partner? name and id. What did you do? What did your partner
         do?</label>
-      <div class="panel-content">>Yael Erdrich, 208460840. I was mainly in charge on the Frotend, DB setup and maintanance and the tests and Yael did the Backend routes, cookies and users views</div>
+      <div class="panel-content">>Yael Erdrich, 208460840. I was mainly in charge on the Frotend, DB setup and
+        maintanance and the tests and Yael did the Backend routes, cookies and users views</div>
     </div>
 
     <div class="faq-question">
       <input id="q5" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q5" class="panel-title"> Specify all the different routes your app supports</label>
-      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB, /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB, /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart</div>
+      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB,
+        /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB,
+        /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart
+      </div>
     </div>
   </div>
 
@@ -66,26 +74,32 @@
       <input id="q7" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q7" class="panel-title">What additional page(s) did you add? How to operate it?</label>
-      <div class="panel-content">We added 5 pages - About us, locations, contact us, and not sure if to call it additional - but registration page, to which you can access through the login page</div>
+      <div class="panel-content">We added 5 pages - About us, locations, contact us, and not sure if to call it
+        additional - but registration page, to which you can access through the login page</div>
     </div>
 
     <div class="faq-question">
       <input id="q8" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q8" class="panel-title"> What was hard to do?</label>
-      <div class="panel-content">As to the way we divded the work between us, I was inchagre of the backend.The begining was the hardest.
-        The idea of what should be done was clear, but between understanding the idea, to implement it, there was quite some gap:<br>
+      <div class="panel-content">As to the way we divded the work between us, I was inchagre of the backend.The begining
+        was the hardest.
+        The idea of what should be done was clear, but between understanding the idea, to implement it, there was quite
+        some gap:<br>
         - Understanding the whole thing of await + fetch + HTTP methods<br>
         - Understanidng how to debug<br>
         - Understanding how our server can connect with the db - learning mongo's documantation<br>
         - Understanding the whole concept of cookies - req.cookies, res.cookies expected<br><br>
 
         BUT - After struggeling with the first real functionality contained each element should had been implemented -
-        It was king of starting to go pretty smothly (of course not that smothly - but I could really debug things with understanding what is going on, and why, 
+        It was king of starting to go pretty smothly (of course not that smothly - but I could really debug things with
+        understanding what is going on, and why,
         and was not just changing things without understanding).<br>
-        
-        I did have struggeled a lot with adding the products each user added to cart to the db, without overwriting the last product was added.
-        Unfortunetly, I wasn't succeeding in doing that. That was hard for me both trying, and both to decide leaving it, after hours and hours of trials :(
+
+        I did have struggeled a lot with adding the products each user added to cart to the db, without overwriting the
+        last product was added.
+        Unfortunetly, I wasn't succeeding in doing that. That was hard for me both trying, and both to decide leaving
+        it, after hours and hours of trials :(
       </div>
     </div>
 
@@ -94,14 +108,22 @@
       <div class="plus">+</div>
       <label for="q9" class="panel-title">Who is your partner? name and id. What did you do? What did your partner
         do?</label>
-      <div class="panel-content">>Eden Vikler, 309840494, Eden was the one responsible for the frontend, for setting up the data in the db, was responsible for the tests and for dealing with DOS attacks. For what I was working on - can be inferred from the "what was hard part" :) I was working on the backend - routes, client, users - authentication and registration - using cookies and db, add to cart for user, searching in catalog, the admin functionality - ading new products to the store, user events. I also used my git experience from one of the courses here to try get us organize the project.</div>
+      <div class="panel-content">>Eden Vikler, 309840494, Eden was the one responsible for the frontend, for setting up
+        the data in the db, was responsible for the tests and for dealing with DOS attacks. For what I was working on -
+        can be inferred from the "what was hard part" :) I was working on the backend - routes, client, users -
+        authentication and registration - using cookies and db, add to cart for user, searching in catalog, the admin
+        functionality - ading new products to the store, user events. I also used my git experience from one of the
+        courses here to try get us organize the project.</div>
     </div>
 
     <div class="faq-question">
       <input id="q10" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q10" class="panel-title"> Specify all the different routes your app supports</label>
-      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB, /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB, /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart</div>
+      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB,
+        /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB,
+        /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart
+      </div>
     </div>
   </div>
 </body>
