--- a/register.html
+++ b/register.html
@@ -5,12 +5,11 @@
     <title>Register Form</title>
     <link rel="stylesheet" type="text/css" href="login.css">
     <link rel="stylesheet" href="./navbar.css">
-    <!-- <script type="text/javascript" src="script.js"></script> -->
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" async>
-      window.addEventListener("load", async () => {
-        await setNavBar();
-      })
+        window.addEventListener("load", async () => {
+            await setNavBar();
+        })
     </script>
 
 </head>
@@ -35,7 +34,8 @@
             <label><b>Password</b></label>
             <input type="Password" name="Pass" id="Pass" placeholder="Password">
             <br><br>
-            <input type="button" name="register" id="register" value="Click here to register" onclick="onClickRegisterEventHandler()">
+            <input type="button" name="register" id="register" value="Click here to register"
+                onclick="onClickRegisterEventHandler()">
         </form>
     </div>
 </body>
