--- a/locations.html
+++ b/locations.html
@@ -2,22 +2,28 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<title>Customize the scroll-bar</title>
-	<link rel="stylesheet" href="./navbar.css">
-	<style media="screen">
-		section {
-			background-image: linear-gradient(
-				to right, rgb(255, 165, 0), rgb(220, 190, 93));
-		}
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" async>
+        window.addEventListener("load", async () => {
+            await setNavBar();
+        })
+    </script>
+    <meta charset="utf-8">
+    <title>Customize the scroll-bar</title>
+    <link rel="stylesheet" href="./navbar.css">
+    <style media="screen">
+        section {
+            background-image: linear-gradient(to right, rgb(255, 165, 0), rgb(220, 190, 93));
+        }
 
-        .h1{
+        .h1 {
             float: right;
         }
-	</style>
+    </style>
 </head>
+
 <body>
-	<div class="navbar">
+    <div class="navbar">
         <nav id="nav">
             <ul id="navElem">
                 <li><a href="./index.html">Home</a></li>
@@ -28,15 +34,18 @@
             </ul>
         </nav>
     </div>
-      <section>
-		<h1 style="color:blackS;">
-			Our Locations
-		</h1>
-		
-		<div>
-			<!-- Google Map Copied Code -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104978.93441318868!2d33.156012437499996!3d34.690252999999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14e73197985a897d%3A0x78f109055731bbba!2sTrendy%20Shoes!5e0!3m2!1siw!2sil!4v1660473650603!5m2!1siw!2sil" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-		</div>
+    <section>
+        <h1 style="color:blackS;">
+            Our Locations
+        </h1>
+
+        <div>
+            <!-- Google Map Copied Code -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104978.93441318868!2d33.156012437499996!3d34.690252999999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14e73197985a897d%3A0x78f109055731bbba!2sTrendy%20Shoes!5e0!3m2!1siw!2sil!4v1660473650603!5m2!1siw!2sil"
+                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </section>
 </body>
 
