--- a/register.html
+++ b/register.html
@@ -23,6 +23,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
                     <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./locations.html">Locations</a></li>
                     <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
             </nav>
